tests/errors/semantics/decl_init_expr_type_mismatch.odl
main :: () -> void  {
    x: int = true;
    x;
};